@@ -79,7 +79,7 @@ public enum FhirVersionEnum {
 		if (myVersionImplementation == null) {
 			try {
 				myVersionImplementation =
-						(IFhirVersion) Class.forName(myVersionClass).newInstance();
+						(IFhirVersion) Class.forName(myVersionClass).getConstructor().newInstance();
 			} catch (Exception e) {
 				throw new InternalErrorException(Msg.code(1710) + "Failed to instantiate FHIR version " + name(), e);
 			}
